# shirokuma

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
include/shirokuma/: game.hpp  sudokuboard.hpp
include/shirokuma/components/: sudokucomponents.hpp
include/shirokuma/events/: events.hpp
include/shirokuma/scenes/: intro.hpp  mainmenu.hpp  sudoku.hpp
include/shirokuma/systems/: intent.hpp  sudokulogic.hpp
resources/: intro.sprite  test.sprite  test_overlay.sprite
resources/intro/: splash-ascii.sprite  splash.sprite
src/: CMakeLists.txt  game.cpp  main.cpp  sudokuboard.cpp
src/scenes/: intro.cpp  mainmenu.cpp  sudoku.cpp
src/systems/: intent.cpp  sudokulogic.cpp
